<resources>
    <string name="app_name">Good Music</string>
    <string name="log_in">Log in</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="log_in_1">Log in</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="registration">Registration</string>
    <string name="already_have_account">Already have account?Sign in here</string>
    <string name="registration_btn">Registration</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_message">We will mail you a link after when you provide the email and click the send button.</string>
    <string name="send_email">Send EMAIL</string>
    <string name="music">Music</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
</resources>