<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".screen.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:gravity="center"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/ed_design"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:id="@+id/email_login"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/ed_design"
                android:padding="10dp"
                android:id="@+id/password_login"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/log_in_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:background="@drawable/ed_design"
                android:padding="6dp"
                android:id="@+id/btn_login"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/sign_up_here"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="5dp"
                android:id="@+id/sign_up"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/forgot_password"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="5dp"
                android:id="@+id/forgot_pwd"
                />
        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/progress_bar">
    </ProgressBar>

</LinearLayout>