<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@drawable/back_design"
tools:context=".screen.reset.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_message"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/ed_design"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:id="@+id/email"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/send_email"
            android:textColor="@color/white"
            android:background="@drawable/ed_design"
            android:padding="6dp"
            android:id="@+id/send_email"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/progress_bar">
        </ProgressBar>
    </LinearLayout>

</LinearLayout>